[package]
name = "addon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
ed25519-dalek = "2.0.0"
prost = "0.12.3"
bytes = "1.1"
rocksdb = {version ="0.22.0"}
threadpool = "1.8.1"
flate2 = "1.0.28"
tar = "0.4.40"
chrono = "0.4.34"

[build-dependencies]
prost-build = "0.12.3"
glob = "0.3.1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
