[package]
name = "addon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
ed25519-dalek = "2.0.0"
prost = "0.12.3"
bytes = "1.1"
rocksdb = {version ="0.22.0", features=["multi-threaded-cf"]}
threadpool = "1.8.1"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
hostname = "0.3.1"
chrono = "0.4.34"
once_cell = "1.19.0"
cadence = "1.2.0"
slog-atomic = "3.1.0"
walkdir = "2.5.0"
tar = "0.4.40"
gzp = "0.11.3"

[build-dependencies]
prost-build = "0.12.3"
glob = "0.3.1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
