[package]
name = "addon"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
ed25519-dalek = "2.0.0"
prost = "0.12.3"
bytes = "1.1"
rocksdb = {version="0.22.0", features=["multi-threaded-cf"]}
threadpool = "1.8.1"
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
hostname = "0.3.1"
chrono = "0.4.34"
once_cell = "1.19.0"
cadence = "1.2.0"
slog-atomic = "3.1.0"
walkdir = "2.5.0"
tar = "0.4.40"
tonic = "0.11.0"
tokio = {version="1.36.0", features=["macros", "rt-multi-thread"]}
tempfile = "3.10.1"
rand = "0.8.5"
hex = "0.4.3"
flate2 = "1.0.28"
gzp = "0.11.3"

[build-dependencies]
tonic-build = "0.11"
glob = "0.3.1"

[dependencies.neon]
version = "1.0.0"
default-features = false
features = [ "futures", "napi-6"]
